<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background"
    >
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/primary"
        app:navigationIcon="@drawable/ic_close"
        />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/card"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clUserInfo1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/clUserInfo2"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintVertical_chainStyle="packed"
            android:layout_margin="10dp"
            >
            <ImageView
                android:id="@+id/ivAvatar"
                android:layout_width="128dp"
                android:layout_height="128dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/tvLogin"
                app:layout_constraintDimensionRatio="1:1"
                />
            <TextView
                android:id="@+id/tvLogin"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/ivAvatar"
                app:layout_constraintEnd_toEndOf="parent"
                android:textSize="24sp"
                android:gravity="center"
                android:foregroundGravity="center|top"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clUserInfo2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/clUserInfo1"
            app:layout_constraintBottom_toBottomOf="parent"
            >
            <TextView
                android:id="@+id/tvBio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/tvTwitterUsername"
                android:textSize="16sp"
                android:gravity="center|start"
                android:layout_margin="10dp"
                />
            <TextView
                android:id="@+id/tvTwitterUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tvBio"
                app:layout_constraintBottom_toTopOf="@id/tvBlog"
                app:layout_constraintVertical_chainStyle="packed"
                android:text="@string/twitter_username"
                android:layout_margin="10dp"
                />
            <TextView
                android:id="@+id/tvBlog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tvTwitterUsername"
                app:layout_constraintBottom_toTopOf="@id/tvEmail"
                android:text="@string/blog"
                android:layout_margin="10dp"
                />
            <TextView
                android:id="@+id/tvEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tvBlog"
                app:layout_constraintBottom_toTopOf="@id/clUserFollowRates"
                android:text="@string/email"
                android:layout_margin="10dp"
                />
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clUserFollowRates"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tvEmail"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_margin="10dp"
                >
                <TextView
                    android:id="@+id/tvlFollowing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/tvFollowers"
                    app:layout_constraintHorizontal_bias="0.9"
                    android:textSize="12sp"
                    android:text="@string/following"
                    android:gravity="center"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    />
                <TextView
                    android:id="@+id/tvFollowers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/tvlFollowing"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:text="@string/followers"
                    android:gravity="center"
                    android:textSize="12sp"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>